<resources>
    <string name="app_name">Quiz</string>
    <!-- Strings used for fragments for navigation -->
    <!-- Main Activity strings -->
    <string name="description_logo">theLogo</string>
    <string name="welcome">Bienvenue dans le Quiz Game !</string>
    <string name="final_score">Score final : %d</string>
    <string name="enter_pseudo">Sélectionne un pseudo</string>
    <string name="pseudo">Ton pseudo</string>
    <string name="validate">CONTINUE</string>
    <string name="category_fragment_label">Catégories</string>
    <string name="back">Retour à l\'accueil</string>
    <string name="second_fragment_label">Quiz</string>
    <string name="third_fragment_label">Scores</string>
    <string name="scoreboard">LeaderBoard</string>
    <string name="score">Score: 0/10</string>
    <string name="name">Nom</string>
    <string name="scoring">Score</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Catégorie</string>
    <string name="question">Question</string>
    <string name="answer">Réponse</string>
    <string name="quiz">Quiz</string>
    <string name="rank">Rang</string>
    <string name="voir_les_scores">Scores</string>
    <string name="changer_de_pseudo">Déconnecter</string>
    <string name="temps_restant_10">Temps restant : 10</string>
    <string name="score_0">Score: 0</string>

</resources>