<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreFragment"
    android:paddingBottom="56dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/trophyImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/trophee"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp" />



        <TextView
            android:id="@+id/scoreboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/robotomedium"
            android:text="@string/scoreboard"
            android:textSize="35sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/trophyImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/finalScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/robotomedium"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/scoreboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TableLayout
            android:id="@+id/scoreTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/finalScoreTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow>
                <TextView
                    android:text="@string/rank"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center" />
                <TextView
                    android:text="@string/scoring"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center" />
                <TextView
                    android:text="@string/name"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/noScoresTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pas de score enregistré pour cette catégorie."
            android:textSize="18sp"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/scoreboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="56dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
